# OS-Chatting-App

./: .gitignore  CMakeLists.txt  README.md
src/: app_main.cpp  shm_chat.cpp  socket_chat.cpp  ui_helpers.h
